--- a/model/templates/public/views/_models.html
+++ b/model/templates/public/views/_models.html
@@ -3,7 +3,7 @@
         <strong><span class="fa fa-th"></span> <%= _.capitalize(pluralize(name)) %></strong>
     </div>
     <div class="panel-body">
-        <button class="btn btn-primary btn-lg" ng-click="create()"><span class="fa fa-flash"></span> Create a new <%= _.capitalize(name) %></button>
+        <button class="btn btn-primary" ng-click="create()"><span class="fa fa-plus"></span> Create a new <%= _.capitalize(name) %></button>
         <div class="table-responsive">
             <table class="table table-striped">
                 <thead>
@@ -38,63 +38,3 @@
         </div>
     </div>
 </section>
-<script id="<%= name %>-modal.html" type="text/ng-template">
-    <form class="form-horizontal" name="form" ng-submit="submit()" novalidate role="form">
-        <div class="modal-header">
-            <button class="close" ng-click="dismiss()" type="button">×</button>
-            <h4 class="modal-title" id="my<%= _.capitalize(name) %>Label">
-                Create or edit a <%= _.capitalize(name) %>
-            </h4>
-        </div>
-        <div class="modal-body">
-            <div class="form-group" ng-show="<%= name %>.id">
-                <label class="col-sm-3 control-label" for="id">ID</label>
-                <input class="col-sm-9 form-control" name="id" ng-model="<%= name %>.id" readonly type="text"/>
-            </div>
-            <% _.each(attrs, function (attr) { %>
-            <div class="form-group" ng-class="{'has-error': form.$dirty && form.<%= attr.attrName.replace(" ", "_").toLowerCase() %>.$invalid}">
-                <label for="<%= attr.attrName.replace(" ", "_").toLowerCase() %>" class="col-sm-2"><%= attr.attrName %></label>
-
-                <% if (attr.attrType === "String") { %>
-                <input type="text" class="col-sm-9 form-control" placeholder="<%= attr.attrName %>" name="<%= attr.attrName.replace(" ", "_").toLowerCase() %>" ng-model="<%= name %>.<%= attr.attrName.replace(" ", "_").toLowerCase() %>"<% if (attr.minLength) { %> ng-minlength="<%= attr.minLength %>" <% } if (attr.maxLength) { %> ng-maxlength="<%= attr.maxLength %>"<% } %><% if (attr.required) { %> required<% } %> />
-                <span class="error" ng-show="form.<%= attr.attrName.replace(" ", "_").toLowerCase() %>.$error.minlength">Must be at least <%= attr.minLength %> characters.</span>
-                <span class="error" ng-show="form.<%= attr.attrName.replace(" ", "_").toLowerCase() %>.$error.maxlength">Must be at most <%= attr.maxLength %> characters.</span>
-
-                <% } else if (attr.attrType === "Email") { %>
-                <input type="email" class="col-sm-9 form-control" placeholder="<%= attr.attrName %>" name="<%= attr.attrName.replace(" ", "_").toLowerCase() %>" ng-model="<%= name %>.<%= attr.attrName.replace(" ", "_").toLowerCase() %>"<% if (attr.required) { %> required<% } %> />
-                <span class="error" ng-show="form.<%= attr.attrName.replace(" ", "_").toLowerCase() %>.$error">Must be a valid email address.</span>
-
-                <% } else if (attr.attrType === "Password") { %>
-                <input type="password" class="col-sm-9 form-control" placeholder="<%= attr.attrName %>" name="<%= attr.attrName.replace(" ", "_").toLowerCase() %>" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" ng-model="<%= name %>.<%= attr.attrName.replace(" ", "_").toLowerCase() %>"<% if (attr.minLength) { %> ng-minlength="<%= attr.minLength %>" <% } if (attr.maxLength) { %> ng-maxlength="<%= attr.maxLength %>"<% } %><% if (attr.required) { %> required<% } %> />
-                <span class="error" ng-show="form.<%= attr.attrName.replace(" ", "_").toLowerCase() %>.$error.minlength">Must be at least <%= attr.minLength %> characters.</span>
-                <span class="error" ng-show="form.<%= attr.attrName.replace(" ", "_").toLowerCase() %>.$error.maxlength">Must be at most <%= attr.maxLength %> characters.</span>
-                <span class="error" ng-show="form.<%= attr.attrName.replace(" ", "_").toLowerCase() %>.$error">Must be a valid password.</span>
-
-                <% } else if (attr.attrType === "Integer") { %>
-                <input type="number" class="col-sm-9 form-control" placeholder="<%= attr.attrName %>" name="<%= attr.attrName.replace(" ", "_").toLowerCase() %>" ng-model="<%= name %>.<%= attr.attrName.replace(" ", "_").toLowerCase() %>"<% if (attr.min) { %> min="<%= attr.min %>" <% } if (attr.max) { %> max="<%= attr.max %>"<% } %><% if (attr.required) { %> required<% } %> />
-                <span class="error" ng-show="form.<%= attr.attrName.replace(" ", "_").toLowerCase() %>.$error.min">Must be greater than or equal to <%= attr.min %>.</span>
-                <span class="error" ng-show="form.<%= attr.attrName.replace(" ", "_").toLowerCase() %>.$error.max">Must be less than or equal to <%= attr.max %>.</span>
-
-                <% } else if (attr.attrType === "Float") { %>
-                <input type="number" step="any" class="col-sm-9 form-control" placeholder="<%= attr.attrName %>" name="<%= attr.attrName.replace(" ", "_").toLowerCase() %>"
-                       ng-model="<%= name %>.<%= attr.attrName.replace(" ", "_").toLowerCase() %>"<% if (attr.min) { %> min="<%= attr.min %>" <% } if (attr.max) { %> max="<%= attr.max %>"<% } %><% if (attr.required) { %> required<% } %> />
-                <span class="error" ng-show="form.<%= attr.attrName.replace(" ", "_").toLowerCase() %>.$error.min">Must be greater than or equal to <%= attr.min %>.</span>
-                <span class="error" ng-show="form.<%= attr.attrName.replace(" ", "_").toLowerCase() %>.$error.max">Must be less than or equal to <%= attr.max %>.</span>
-
-                <% } else if (attr.attrType === "Boolean") { %>
-                <input type="checkbox" name="<%= attr.attrName.replace(" ", "_").toLowerCase() %>" ng-model="<%= name %>.<%= attr.attrName.replace(" ", "_").toLowerCase() %>"<% if (attr.required) { %> required<% } %> />
-
-                <% } else if (attr.attrType === "Date") { %>
-                <input type="text" class="col-sm-9 form-control" placeholder="<%= attr.attrName %>" name="<%= attr.attrName.replace(" ", "_").toLowerCase() %>" ui-date="<%= attr.attrName.replace(" ", "_").toLowerCase() %>DateOptions" ui-date-format="yy-mm-dd" ng-model="<%= name %>.<%= attr.attrName.replace(" ", "_").toLowerCase() %>"<% if (attr.required) { %> required<% } %> />
-
-                <% } else if (attr.attrType === "Enum") {_.each(attr.enumValues, function (value) { %>
-                <label class="radio"><input type="radio" name="<%= attr.attrName.replace(" ", "_").toLowerCase() %>" value="<%= value %>" ng-model="<%= name %>.<%= attr.attrName.replace(" ", "_").toLowerCase() %>"<% if (attr.required) { %> required<% } %> /> <%= value %></label><% })} %>
-            </div>
-            <% }); %>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-default" ng-click="dismiss()" type="button">Cancel</button>
-            <button class="btn btn-primary" ng-disabled="form.$invalid" type="submit">Save</button>
-        </div>
-    </form>
-</script>
